src/rules/snapshots/sherif__rules__unordered_dependencies__test__dependency_kind-3.snap
---
source: src/rules/unordered_dependencies.rs
expression: issue.message()
---
  │ {
  -   "peerDependencies": {   ← keys aren't sorted.
  -     ...
  -   }
  │ }
