src/rules/snapshots/sherif__rules__unordered_dependencies__test__dependency_kind-4.snap
---
source: src/rules/unordered_dependencies.rs
expression: issue.message()
---
  │ {
  │   "optionalDependencies": {
  ~     ...   ← keys aren't sorted.
  │   }
  │ }
