src/rules/snapshots/sherif__rules__unordered_dependencies__test__dependency_kind.snap
---
source: src/rules/unordered_dependencies.rs
expression: issue.message()
---
  │ {
  -   "dependencies": {   ← keys aren't sorted.
  -     ...
  -   }
  │ }
